# BlainnflareEngine

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists  CMakeLists.txt  CMakePresets.json  README.md  default_cmake_build.bat  icon.rc  main.cc  main.cpp
editor/: CMakeLists.txt  sources.qrc
editor/GameBuild/: GameBuild.bat
editor/include/: ContentContextMenu.h  ContentDelegate.h  Editor.h  EditorRegistry.h  EditorSink.h  FileContextMenu.h  FileSystemUtils.h  InspectorFabric.h  LabelsUtils.h  MimeFormats.h  PrefabDropHandler.h  SettingsData.h  TexturePreviewAsyncLoader.h  console_messages_widget.h  editor_main.h  editor_settings.h  folder_content_list_view.h  folder_content_widget.h  folders_tree_view.h  folders_widget.h  import_asset_dialog.h  themed_panel.h  viewport_widget.h
editor/include/ContextMenu/: ContentContextMenu.h  FileContextMenu.h
editor/include/content-browser/: IconProvider.h  path_bar_widget.h
editor/include/context-menu/: AddToSceneContextMenu.h  ContentContextMenu.h  SceneContextMenu.h  ViewportSettingsContext.h
editor/include/dialog/: create_material_dialog.h  import_asset_dialog.h  import_model_dialog.h  import_texture_dialog.h
editor/include/inspector/: EntityInspectorData.h  InspectorFabric.h  browser_item_inspector_content.h  entity_inspector_content.h  float_input_field.h  inspector_content_base.h  inspector_widget.h  material_inspector_content.h  mesh_inspector_content.h  prefab_inspector_content.h
editor/include/scene/: EntityDelegate.h  EntityNode.h  EntityNodeComparator .h  SceneItemModel.h  SceneMeta.h  SceneModel.h  scene_hierarchy_widget.h
editor/src/: ContentContextMenu.cpp  ContentDelegate.cpp  Editor.cpp  EditorRegistry.cpp  FileContextMenu.cpp  FileSystemUtils.cpp  IconProvider.cpp  InspectorFabric.cpp  TexturePreviewAsyncLoader.cpp  console_messages_widget.cpp  editor_main.cpp  editor_main.cpp~  editor_settings.cpp  folder_content_list_view.cpp  folder_content_widget.cpp  folders_tree_view.cpp  folders_widget.cpp  import_asset_dialog.cpp  path_bar_widget.cpp  themed_panel.cpp
editor/src/ContextMenu/: ContentContextMenu.cpp  FileContextMenu.cpp
editor/src/content-browser/: IconProvider.cpp
editor/src/context-menu/: AddToSceneContextMenu.cpp  AddToSceneContextMenu.cpp~  ContentContextMenu.cpp  FileContextMenu.cpp  SceneContextMenu.cpp  ViewportSettingsContext.cpp
editor/src/dialog/: create_material_dialog.cpp  import_asset_dialog.cpp  import_model_dialog.cpp  import_texture_dialog.cpp
editor/src/inspector/: InspectorFabric.cpp  browser_item_inspector_content.cpp  entity_inspector_content.cpp  float_input_field.cpp  inspector_content_base.cpp  inspector_widget.cpp  material_inspector_content.cpp  mesh_inspector_content.cpp  prefab_inspector_content.cpp
editor/src/scene/: EntityDelegate.cpp  SceneMeta.cpp  scene_hierarchy_widget.cpp
editor/templates/: BehaviorScriptTemplate.lua  ScriptTemplate.lua
editor/themes/: dark.json  light.json
editor/ui/: console_messages_widget.ui  editor_main.ui  editor_settings.ui  folder_content_list_view.ui  folder_content_widget.ui  folders_tree_view.ui  folders_widget.ui
editor/ui/content-browser/: path_bar_widget.ui
editor/ui/dialog/: create_material_dialog.ui  import_asset_dialog.ui  import_model_dialog.ui  import_texture_dialog.ui
editor/ui/inspector/: browser_item_inspector_content.ui  inspector_content_base.ui  inspector_widget.ui  material_inspector_content.ui  mesh_inspector_content.ui
editor/ui/scene/: SceneItemModel.cpp  SceneModel.cpp  scene_hierarchy_widget.ui
engine/: CMakeLists.txt
engine/include/: Engine.h  EngineConfig.h
engine/include/Render/: BlainnRendererCoreTypes.h  Camera.h  CascadeShadowMap.h  CommandQueue.h  Constants.h  DDSTextureLoader.h  DXHelpers.h  DebugRenderer.h  Device.h  EditorCamera.h  FrameResource.h  FreyaCoreDefines.h  FreyaCoreTypes.h  FreyaMath.h  FreyaUtil.h  GBuffer.h  GTexture.h  GraphicsTypes.h  MathHelper.h  PipelineStateObject.h  PrebuiltEngineMeshes.h  RenderTarget.h  Renderer.h  Resource.h  RootSignature.h  RuntimeCamera.h  SelectionManager.h  Shader.h  ShadowMap.h  SwapChain.h  Texture.h  UploadBuffer.h
engine/include/ai/: AIController.h  BT.h  BTBuilder.h  BTNodes.h  BehaviourTree.h  Blackboard.h  PerceptionEvents.h  UtilityBuilder.h  UtilityContext.h  UtilityDecision.h  UtilitySelector.h
engine/include/components/: AIControllerComponent.h  CameraComponent.h  LightComponent.h  MeshComponent.h  NavMeshVolumeComponent.h  PerceptionComponent.h  PhysicsComponent.h  PrefabComponent.h  RenderComponent.h  ScriptingComponent.h  SkyboxComponent.h  StimulusComponent.h
engine/include/file-system/: FileSystemObject.h  Material.h  Model.h  Texture.h  TextureType.h
engine/include/handles/: Handle.h
engine/include/physics/: BodyBuilder.h  BodyFactory.h  BodyGetter.h  BodyUpdater.h  ContactListenerImpl.h  Conversion.h  Layers.h  PhysicsCreationSettings.h  PhysicsEvents.h  PhysicsTypes.h  RayCastResult.h  ShapeFactory.h
engine/include/scene/: BasicComponents.h  Entity.h  EntityTemplates.h  Scene.h  SceneEvent.h  SceneManager.h  SceneManagerTemplates.h  SceneParser.h  TransformComponent.h
engine/include/scripting/: LuaScript.h  TypeRegistration.h
engine/include/subsystems/: AISubsystem.h  AssetLoader.h  AssetManager.h  Bifrost.h  Freya.h  Jord.h  Log.h  PerceptionSubsystem.h  PhysicsSubsystem.h  PrefabSubsystem.h  RenderSubsystem.h  ScriptingSubsystem.h  Subsystem.h  WindowManger.h
engine/include/tools/: ComponentRegistry.h  FreeListVector.h  PeriodicTimeline.h  Profiler.h  SelectionManager.h  Serializer.h  Timeline.h  UUID.h  random.h
engine/src/: Engine.cc  Engine.cpp
engine/src/Render/: Camera.cpp  CascadeShadowMap.cpp  CommandQueue.cpp  DDSTextureLoader.cpp  DebugRenderer.cpp  Device.cpp  EditorCamera.cpp  FrameResource.cpp  FreyaUtil.cpp  GBuffer.cpp  GTexture.cpp  IEngineFactory.h  PipelineStateObject.cpp  PrebuiltEngineMeshes.cpp  RenderTarget.cpp  Renderer.cpp  Resource.cpp  RootSignature.cpp  RuntimeCamera.cpp  SelectionManager.cpp  Shader.cpp  ShadowMap.cpp  SwapChain.cpp  Texture.cpp
(+265 files in other folders)
